fix: static hero, remove all motion, bugfixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Cyberpunk Brutalist Portfolio</title>
+      <meta name="robots" content="noindex, nofollow" />
+      <meta name="googlebot" content="noindex, nofollow" />
+      <title>Metasyndikate Studios® – Creative Syndicate, Design, Tech, Media</title>
+      <meta name="description" content="Metasyndikate Studios® is a non-profit, ideology-driven creative syndicate. Operating system for ideas. One vision. Zero dilution. Design, media, tech, and philosophy." />
+      <meta name="keywords" content="Metasyndikate Studios, Metasyndikate, creative syndicate, design, tech, media, non-profit, Aksh Thakur, Bloodlust, Witheredraxia, portfolio, creative agency, digital studio, innovation, philosophy" />
+      <meta property="og:title" content="Metasyndikate Studios® – Creative Syndicate, Design, Tech, Media" />
+      <meta property="og:description" content="Metasyndikate Studios® is a non-profit, ideology-driven creative syndicate. Operating system for ideas. One vision. Zero dilution." />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://metasyndikate.com/" />
+      <meta property="og:image" content="/logo.png" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Metasyndikate Studios® – Creative Syndicate, Design, Tech, Media" />
+      <meta name="twitter:description" content="Metasyndikate Studios® is a non-profit, ideology-driven creative syndicate. Operating system for ideas. One vision. Zero dilution." />
+      <meta name="twitter:image" content="/logo.png" />
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+      <link rel="icon" type="image/png" href="/logo.png" />
     </head>
 
     <body>
